# raven

./: .gitignore  .theme  .wallpaper  CHANGELOG.md  Cargo.toml  README.md  drool.rom.sym  justfile  tmp.rom
.config/: hakari.toml
.github/workflows/: check-wasm.yml  check.yml  test-native.yml
cardinal-cli/: Cargo.toml
cardinal-gui/: Cargo.toml  index.html
cardinal-gui/src/: main.rs  native.rs  web.rs
cardinal-uxn/: Cargo.toml
cardinal-uxn/src/: lib.rs
cardinal-uxn/src/native/: aarch64.s  aarch64_macos.s
cardinal-varvara/: Cargo.toml  README.md
cardinal-varvara/src/: audio.rs  lib.rs  mouse.rs
cardinal-varvara/tests/: snapshots.rs
cli/: Cargo.toml
crow/: Cargo.toml
crow-cli/: Cargo.toml
crow-cli/src/: main.rs
crow-gui/: Cargo.toml
crow-gui/src/: main.rs
crow/src/: audio.rs  console.rs  controller.rs  datetime.rs  file.rs  lib.rs  mouse.rs  screen.rs  system.rs  window.rs
fuzz/: Cargo.toml  watch.sh
fuzz/artifacts/fuzz-native/: crash-03f58b4c1757ef4780ccfb7b9ba5ede5315bb31d  crash-13e9426d94ab50729a57c88b55054c4680ce00fb  crash-47a314a60a9677428819273c6b76026eb1672251  crash-800a78a0cc82eac8da352bbda064096f83d16526  crash-9f6194d012e32351219374c1b15c7675fdc3b297  crash-f18a824d180783790ee428690d8de571c4a6590a  crash-fe2c36cccb56a4ab11f56a0d1e77bc537f8c82c3  minimized-from-00859dd05c36a220c9ff3ca25982a628555dec39  minimized-from-00bf8abe8906ac0cdd5d01f7fc409712b217896f  minimized-from-03f58b4c1757ef4780ccfb7b9ba5ede5315bb31d  minimized-from-0e38bbdbcc6fc45f3628a2af2831c5c8a02a2439  minimized-from-12d7b88e7836e454c296e837dc8674e39128a207  minimized-from-13e9426d94ab50729a57c88b55054c4680ce00fb  minimized-from-14168d25f3b9d65eee20a346b5dfd0bd1439f664  minimized-from-1859f6738109ef032caec81ae463083f382b9c79  minimized-from-1985156554454c22db69e75d8f76c665c6c54c65  minimized-from-1f38432bbc8d8d44c83dd2f3ecbe43417940bfeb  minimized-from-21b847a3b9d441ea24bd65c3cc40ed12c2163791  minimized-from-22d713212c51e64cae10e94411e716d726be7874  minimized-from-24a75b39aac51c2769cdda6f1a5f746072b4b000  minimized-from-27605dae215aa081dbc01a485e54365dc313197a  minimized-from-3629fdc6769e026aa2fd4a190c3f2e9eed9cf4dd  minimized-from-3694121a30fa1f8b6cce1986483cb600fc856a1f  minimized-from-39b732bfc041dbccb3bd35af9bad6679551de69b  minimized-from-3b9c183e89b3e631cb4bd60b523feb61b64723f6  minimized-from-4550f83f737f16da388c12410906edfa09b2078a  minimized-from-47a314a60a9677428819273c6b76026eb1672251  minimized-from-4a079cbc08f78c2030170570ad6f52c5d87e5cad  minimized-from-4cc2fa2900b6981b3fda319a5d4ea387282002ad  minimized-from-4da6a49bc6a0cfebd61ecd2e807ac8971960bb0a  minimized-from-4ded5f95aa4cf1a62adf2e1d3de881f19cf07fc4  minimized-from-533e6f1a1a6f0bad7d7411da6964032e610567ff  minimized-from-554e90258a1cfa9b9c748df74200043cb2d46c54  minimized-from-5a34f1d8222583d7703c155aaa3bfc2c2fcb0f89  minimized-from-5c5fc4a50dd11cc0143d7de245fee6e3a10e7f5b  minimized-from-5dbcd58e658c9fc06473d02de38e9e94248e083b  minimized-from-5fbb8dec15b4e4469f1216756e0b3b727c22e366  minimized-from-69e9867dadd2c49b9d21ed01a08d826faa1af093  minimized-from-71c026dbd185f1d477629c1e63a57ef8da47e36e  minimized-from-73c8e156f55cd779572d842a9f5fef01f091665d  (+29 more)
fuzz/artifacts/fuzz_target_1/: crash-9d1d834fdd1457f4a1c76962a416cb9fbcb5a68d
fuzz/fuzz_targets/: native.rs
fuzz/src/: native.rs
gui/: Cargo.toml
gui/src/: main.rs
raven/: Cargo.toml
raven-cli/: Cargo.toml
raven-cli/src/: lib.rs  main.rs
raven-cli/tests/: argument_passing.rs  drifblim-seed.rom
raven-gui/: Cargo.toml  index.html
raven-gui/src/: lib.rs  main.rs  native.rs  web.rs
raven-uxn/: Cargo.toml  build.rs
raven-uxn/benches/: fibonacci.rs
raven-uxn/src/: lib.rs  tailcall.rs
raven-uxn/src/jit/: aarch64.rs  mod.rs
raven-uxn/src/native/: aarch64.rs  aarch64.s  aarch64_linux.s  aarch64_macos.s  jump_table.s  mod.rs
raven-uxn/src/native/aarch64/: impl.s  mod.rs
raven-uxn/src/native/x86_64/: impl.s  linux.s  mod.rs
raven-varvara/: Cargo.toml  README.md
raven-varvara/benches/: mandelbrot.rs
raven-varvara/src/: audio.rs  console.rs  controller.rs  datetime.rs  file.rs  lib.rs  mouse.rs  screen.rs  system.rs  window.rs
raven-varvara/tests/: .gitignore  snapshots.rs
raven-web/: Cargo.toml  index.html
raven-web/src/: main.rs
roms/: README.md  audio.rom  bunnymark.rom  controller.rom  drool.rom  mandelbrot.rom  piano.rom  screen.blending.rom  screen.bounds.rom  screen.pixel.rom  screen.rom  screen_auto.rom
src/: lib.rs  main.rs  uxn.rs  varvara.rs
src/varvara/: console.rs  mod.rs  system.rs
uxn/: Cargo.toml
uxn/src/: lib.rs
varvara/: Cargo.toml
varvara/src/: audio.rs  console.rs  controller.rs  datetime.rs  gui.rs  lib.rs  mouse.rs  screen.rs  system.rs  window.rs
workspace-hack/: Cargo.toml
