[workspace]
resolver = "2"
members = [
    "raven-uxn",
    "raven-varvara",
    "raven-cli",
    "raven-gui",
]
exclude = ["fuzz"]

[profile.release]
debug = true
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"
eframe = { version = "0.27", default-features = false, features = [ "default_fonts", "glow"] }
env_logger = "0.11.3"
image = { version = "0.25.5", default-features = false, features = [ "png" ] }
log = "0.4.21"
static_assertions = "1.1.0"
wasm-bindgen-futures = "0.4"
zerocopy = { version = "0.7.34", features = ["derive"] }
web-sys = { version = "*", features = ["HtmlSelectElement", "HtmlOptionElement"] }
