[workspace]
resolver = "2"
members = [
    "raven-uxn",
    "raven-varvara",
    "raven-cli",
    "raven-gui",
    "workspace-hack",
]
exclude = ["fuzz"]

[profile.release]
debug = true
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.17.3"
criterion = { version = "0.8", default-features = false }
eframe = { version = "0.34", default-features = false, features = [ "default_fonts", "glow", "wayland"] }
env_logger = "0.11.3"
image = { version = "0.25.5", default-features = false, features = [ "png" ] }
locked-tripwire = "0.1.1"
log = "0.4.21"
static_assertions = "1.1.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "*", features = ["HtmlSelectElement", "HtmlOptionElement"] }
zerocopy = { version = "0.8.42", features = ["derive"] }
