[package]
name = "cardinal-gui"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/davehorner/cardinal"
description = "Simple GUI for a Uxn + Varvara system"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
env_logger.workspace = true
log.workspace = true

varvara = { path = "../cardinal-varvara", package = "cardinal-varvara" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
cpal.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
cpal = { workspace = true, features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
uxn = { path = "../cardinal-uxn", package = "cardinal-uxn", features = ["native"] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
uxn = { path = "../cardinal-uxn", package = "cardinal-uxn" }
