[package]
name = "cardinal-uxn"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/davehorner/cardinal"
description = "Uxn CPU interpreter"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
zerocopy.workspace = true

[features]
alloc = []
default = ["alloc"]
native = []
