[package]
name = "cardinal-varvara"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/davehorner/cardinal"
description = "Varvara Ordinator"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
chrono.workspace = true
log.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true

uxn = { path = "../cardinal-uxn", package = "cardinal-uxn", version = "0.1" }

[dev-dependencies]
image.workspace = true
