[package]
name = "crow"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
log.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true

cpal = { workspace = true, optional = true }
minifb = { workspace = true, optional = true }

raven.path = "../raven"

[features]
default = ["gui"]
gui = ["dep:minifb", "dep:cpal"]
