[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
uxn = { path = "../raven-uxn", package = "raven-uxn", features = ["native", "fuzz"] }

[[bin]]
name = "fuzz-native"
path = "fuzz_targets/native.rs"
test = false
doc = false
bench = false
