[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
uxn = { path = "../cardinal-uxn", package = "cardinal-uxn", features = ["native"] }

[[bin]]
name = "fuzz-native"
path = "src/native.rs"
test = false
doc = false
bench = false
