[package]
name = "raven-cli"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mkeeter/raven"
description = "Simple Uxn + Varvara CLI"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true

uxn = { path = "../raven-uxn", package = "raven-uxn" }
varvara = { path = "../raven-varvara", package = "raven-varvara" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
