[package]
name = "raven-cli"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mkeeter/raven"
description = "Simple Uxn + Varvara CLI"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
locked-tripwire.workspace = true
log.workspace = true

uxn = { path = "../raven-uxn", package = "raven-uxn", version = "0.3.0" }
varvara = { path = "../raven-varvara", package = "raven-varvara", version = "0.3.0" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
native = ["varvara/native"]
tailcall = ["varvara/tailcall"]
