[package]
name = "raven-gui"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mkeeter/raven"
description = "Simple GUI for a Uxn + Varvara system"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
env_logger.workspace = true
log.workspace = true

uxn = { path = "../raven-uxn", package = "raven-uxn" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
cpal.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
cpal = { workspace = true, features = ["wasm-bindgen"] }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
varvara = { path = "../raven-varvara", package = "raven-varvara" }

[target.'cfg(not(any(target_arch = "aarch64", target_arch = "x86_64")))'.dependencies]
varvara = { path = "../raven-varvara", package = "raven-varvara", default-features = false }
