[package]
name = "raven-gui"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mkeeter/raven"
description = "Simple GUI for a Uxn + Varvara system"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
env_logger.workspace = true
locked-tripwire.workspace = true
log.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
cpal.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
cpal = { workspace = true, features = ["wasm-bindgen"] }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
uxn = { path = "../raven-uxn", package = "raven-uxn", version = "0.2" }
varvara = { path = "../raven-varvara", package = "raven-varvara", version = "0.2" }

[target.'cfg(not(any(target_arch = "aarch64", target_arch = "x86_64")))'.dependencies]
uxn = { path = "../raven-uxn", package = "raven-uxn", version = "0.2", default-features = false }
varvara = { path = "../raven-varvara", package = "raven-varvara", version = "0.2", default-features = false }
