[package]
name = "raven-uxn"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mkeeter/raven"
description = "Uxn CPU interpreter"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
zerocopy.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = ["alloc", "native"]
alloc = []
native = []

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "fibonacci"
harness = false
