[package]
name = "raven-uxn"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mkeeter/raven"
description = "Uxn CPU interpreter"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
zerocopy.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = ["alloc"]
alloc = ["zerocopy/alloc"]
native = []
tailcall = []

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
rustversion.workspace = true

[[bench]]
name = "fibonacci"
harness = false
