[package]
name = "raven-varvara"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mkeeter/raven"
description = "Varvara Ordinator"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
chrono.workspace = true
log.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
uxn = { path = "../raven-uxn", package = "raven-uxn", version = "0.1", features = ["native"] }

[target.'cfg(not(any(target_arch = "aarch64", target_arch = "x86_64")))'.dependencies]
uxn = { path = "../raven-uxn", package = "raven-uxn", version = "0.1" }

[dev-dependencies]
criterion.workspace = true
image.workspace = true

[[bench]]
name = "mandelbrot"
harness = false
