[package]
name = "raven-varvara"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mkeeter/raven"
description = "Varvara Ordinator"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
chrono.workspace = true
log.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true
uxn = { path = "../raven-uxn", package = "raven-uxn", version = "0.2", default-features = false, features = ["alloc"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = ["native"]
native = ["uxn/native"]

[dev-dependencies]
criterion.workspace = true
image.workspace = true

[[bench]]
name = "mandelbrot"
harness = false
