[package]
name = "raven-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
log.workspace = true

uxn = { path = "../raven-uxn", package = "raven-uxn" }
varvara = { path = "../raven-varvara", package = "raven-varvara" }
raven-gui = { path = "../raven-gui", package = "raven-gui" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
cpal = { workspace = true, features = ["wasm-bindgen"] }
