[package]
name = "varvara"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = {workspace = true, optional = true }
static_assertions.workspace = true
zerocopy.workspace = true
log.workspace = true

uxn.path = "../uxn"

[features]
default = ["screen", "file"]
screen = ["dep:minifb"]
file = []
