[package]
name = "varvara"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
log.workspace = true
minifb = {workspace = true, optional = true }
static_assertions.workspace = true
zerocopy.workspace = true

uxn.path = "../uxn"

[features]
default = ["gui"]
gui = ["dep:minifb"]
